📝 Update Licence & Add 404 Page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,16 @@
     "**/*.js": "javascriptreact"
   },
   "cSpell.words": [
+    "bobthefish",
     "calt",
     "canplaythrough",
     "clig",
+    "figma",
     "fuschia",
     "Gatsbyjs",
     "liga",
     "linebreak",
+    "monokai",
     "msapplication",
     "nums",
     "ogdesc",
